--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://jaimediazz.github.io/portfolio/",
   "name": "vue-cli",
   "description": "A Vue.js project",
   "version": "1.0.0",
